2008-07-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-05
	* fix bug reported by Tulika and Bryan: freshly loaded datasets
	would appear to have been 'changed'.
	* pick up latest developments by Ulf regarding web & converter

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-04
	* bugfix to python conversion of InputTag parameters (Ulf)

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-03
	* fix ConfigurationModifer::orderedSequenceIterator() (relevant to
	python conversion!)

2008-06-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-02
	* OnlineConverter: add parameter 'SelectHLTOutput' to stream
	writer, and infer its value from the SelectEvent statements of the
	output modules in the configuration (temporary).

2008-06-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-01
	* converter: python fix by Ulf

2008-06-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-00
	* add data.PrescaleTable
	* use data.PrescaleTable in gui.PrescaleDialog
	* make OnlineConverter return data.PrescaleTable
	* NOTE: data.PrescaleTable only works with CMSSW_2_1_0_pre3 and
	later!
	* fix/improve gui.OutputModuleDialog

2008-05-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-11
	* fix bug reported by JR regarding the diff gui dialog

2008-05-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-10
	* add additional checks for forbidden symbols in the configuration
	name in the GUIs SaveConfiguration dialog.

2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-09
	* revert to old default regarding --cff (namely implying
	--noedsources and --nooutput)
	
2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-08
	* gui: make sure to always keep trigger information
	  (OutputModuleEditor)